# hosted_vcs

./: Cargo.toml  LICENSE  build.rs
examples/: github_octocat.rs  github_octocat_say.rs  github_pwlogin.rs  github_tklogin.rs  github_zen.rs
src/: lib.rs
src/github/: api.rs  mod.rs  model.rs  session.rs
src/github/v3/: error.rs
src/github/v3/model/: mod.rs  organization.rs  repository.rs  user.rs
src/github/v3/session/: authenticated.rs  mod.rs
